:ant: Code cleanup and added config options for Swampman